[package]
name = "memo"
version = "0.1.0"
authors = ["Lucas Vieira dos Santos"]
edition = "2021"
license-file = "LICENSE"
description = "Create reminders directly from your terminal."
homepage = "https://github.com/iamlucasvieira/memo"
repository = "https://github.com/iamlucasvieira/memo"
readme = "README.md"
keywords = ["memo", "reminder", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
tempfile = "3.9.0"
